use function to create current products from array

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="../img/favicon.png"/>
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -17,12 +17,12 @@
         <div class="load-container">
             <!-- <span class="loading-message">Finishing up my practice</span> -->
             <div class="trombone-container">
-                <img id="loader-body" src="../img/tromboneLogo.svg" width="250px" alt="logo">
-                <!-- <img id="loader-body" src="../img/tromboneBody.svg" width="250px" alt="logo">
-                <img id="loader-slide" src="../img/tromboneSlide.svg" width="250px" alt="logo"> -->
-                <img id="music-note-1" src="../img/musicNote.svg" width="40px" alt="logo">
-                <img id="music-note-2" src="../img/musicNote.svg" width="40px" alt="logo">
-                <img id="music-note-3" src="../img/musicNote.svg" width="40px" alt="logo">
+                <img id="loader-body" src="./img/tromboneLogo.svg" width="250px" alt="logo">
+                <!-- <img id="loader-body" src="./img/tromboneBody.svg" width="250px" alt="logo">
+                <img id="loader-slide" src="./img/tromboneSlide.svg" width="250px" alt="logo"> -->
+                <img id="music-note-1" src="./img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-2" src="./img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-3" src="./img/musicNote.svg" width="40px" alt="logo">
             </div>
             <div class="brand" id="loading-brand">
                 <a href="#">Jonathan Tang Music</a>
@@ -41,7 +41,7 @@
                 <li><a href="media.html">Media</a></li>
                 <li><a href="downloads.html">Downloads</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
-                <!--<li class="cart"><a href="#"><img src="../img/cart.png" /></a></li>-->
+                <!--<li class="cart"><a href="#"><img src="./img/cart.png" /></a></li>-->
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -57,7 +57,7 @@
         <div class="not-nav">
             <section>
                 <div class="contact_me">
-                    <img src="../img/skyline.jpg" class="banner contact-background" />
+                    <img src="./img/skyline.jpg" class="banner contact-background" />
                     <h2>Contact</h2>
                 </div>
                 
