--- a/downloads.html
+++ b/downloads.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="../img/favicon.png"/>
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -16,19 +16,19 @@
         src="https://www.paypal.com/sdk/js?client-id=AWbyh-q3WnVa7v9HMI48g0amrp6tGxWrKSUi21Ve85P5HdwP1chIP1Eoe__-N3ZH8hnntJHAqQRLVxjl&disable-funding=paylater&enable-funding=venmo">
     </script>
 
-    <!-- <div class="loader">
+    <div class="loader">
         <div class="load-container">
             <div class="trombone-container">
-                <img id="loader-body" src="../img/tromboneLogo.svg" width="250px" alt="logo">
-                <img id="music-note-1" src="../img/musicNote.svg" width="40px" alt="logo">
-                <img id="music-note-2" src="../img/musicNote.svg" width="40px" alt="logo">
-                <img id="music-note-3" src="../img/musicNote.svg" width="40px" alt="logo">
+                <img id="loader-body" src="./img/tromboneLogo.svg" width="250px" alt="logo">
+                <img id="music-note-1" src="./img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-2" src="./img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-3" src="./img/musicNote.svg" width="40px" alt="logo">
             </div>
             <div class="brand" id="loading-brand">
                 <a href="#">Jonathan Tang Music</a>
             </div>    
         </div>    
-    </div> -->
+    </div>
 
     <nav class="myNav">
         <div class="brand">
@@ -40,7 +40,6 @@
             <li><a href="media.html">Media</a></li>
             <li><a class="active" href="downloads.html">Downloads</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <!--<li class="cart"><a href="#"><img src="../img/cart.png" /></a></li>-->
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -54,18 +53,23 @@
     <div class="not-nav">
         <section class="jumbotron" id="downloads">
             <div class="my-downloads">
-                <img src="../img/TangPortrait-146.jpg" class="downloads-background" />
+                <img src="./img/TangPortrait-146.jpg" class="downloads-background" />
                 <h2>Downloads</h2>
             </div>
         </section>   
+        <!-- <div class="content">
+            <h2 style="position: relative; top: 70px; color: white; text-align: center; height: 120px">Content Coming Soon!</h2>
+        </div> -->
+
+
         <div class="content">
             <div class="arrangements">
                 <h3 class="arrangements-title">My Arrangements</h3>
                 <div class="arrangements-products">
-                    <div class="arrangement-card" id="1">
-                        <img class="arrangement-image" src="../img/sheet-music-temp.png" width="300px" alt="product image">
+                    <!-- <div class="arrangement-card" id="1">
+                        <img class="arrangement-image" src="./img/sheet-music-temp.png" width="300px" alt="product image">
                         <div class="card-right">
-                            <h2 class="arrangement-title">This is the title 1</h2>
+                            <h2 class="arrangement-title">Liebesfreud</h2>
                             <h5>This is the composer</h5>
                             <p>This is the description</p>
                             <p>Digital Download</p>
@@ -74,7 +78,7 @@
                         </div>
                     </div>
                     <div class="arrangement-card" id="2">
-                        <img class="arrangement-image" src="../img/sheet-music-temp.png" width="300px" alt="product image">
+                        <img class="arrangement-image" src="./img/sheet-music-temp.png" width="300px" alt="product image">
                         <div class="card-right">
                             <h2 class="arrangement-title">This is the title 2</h2>
                             <h5>This is the composer</h5>
@@ -85,7 +89,7 @@
                         </div>
                     </div>
                     <div class="arrangement-card" id="3">
-                        <img class="arrangement-image" src="../img/sheet-music-temp.png" width="300px" alt="product image">
+                        <img class="arrangement-image" src="./img/sheet-music-temp.png" width="300px" alt="product image">
                         <div class="card-right">
                             <h2 class="arrangement-title">This is the title 3</h2>
                             <h5>This is the composer</h5>
@@ -96,7 +100,7 @@
                         </div>
                     </div>
                     <div class="arrangement-card" id="4">
-                        <img class="arrangement-image" src="../img/sheet-music-temp.png" width="300px" alt="product image">
+                        <img class="arrangement-image" src="./img/sheet-music-temp.png" width="300px" alt="product image">
                         <div class="card-right">
                             <h2 class="arrangement-title">This is the title 4</h2>
                             <h5>This is the composer</h5>
@@ -107,7 +111,7 @@
                         </div>
                     </div>
                     <div class="arrangement-card" id="5">
-                        <img class="arrangement-image" src="../img/sheet-music-temp.png" width="300px" alt="product image">
+                        <img class="arrangement-image" src="./img/sheet-music-temp.png" width="300px" alt="product image">
                         <div class="card-right">
                             <h2 class="arrangement-title">This is the title 5</h2>
                             <h5>This is the composer</h5>
@@ -116,7 +120,7 @@
                             <span class="price">$5.00</span>
                             <button class="add">Add To Cart</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div id="cart">
@@ -146,7 +150,6 @@
                         <div class="total">
                             <span>Total: $</span><span id="total">0</span>
                         </div>
-                        <!-- <button id="checkout-button" class="cart-button">Checkout</button> -->
                         <div id="paypal-button-container"></div>
                     </div>
                 </div>
@@ -155,6 +158,7 @@
                     <h3>Your Cart Is Empty</h3>
                 </div>
             </div>
+            
         </div>
         <div class="re-open d-none">
             <p>Accidentally close out of your downloads too soon?</p><span id="open">Click here</span>
@@ -175,8 +179,8 @@
         </footer>
     </div>
 
-    <script src="app.js"></script>
-    <script src="downloads.js"></script>
+    <script src="./app.js"></script>
+    <script src="./downloads.js"></script>
     <script>
     </script>
 </body>
