--- a/lessons.html
+++ b/lessons.html
@@ -9,21 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="../img/favicon.png"/>
-    <!-- Calendly badge widget begin -->
-        <!-- <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/jonthantangmusic', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff', branding: true }); }</script>
-        <style type="text/css">
-            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px; }
-        </style> -->
-<!-- Calendly badge widget end -->
-    <!-- Calendly badge widget begin -->
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <!-- Calendly badge widget begin -->    <!-- Calendly badge widget begin -->
         <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
         <script type="text/javascript">Calendly.initBadgeWidget({ url: 'https://calendly.com/jonthantangmusic', text: 'Schedule a lesson with me', color: '#3877d4', textColor: '#ffffff' });</script>
         <style type="text/css">
-            .calendly-badge-widget { z-index: 1; position: fixed; bottom: 20px; }
+            .calendly-badge-widget { z-index: 2; position: fixed; bottom: 20px; }
             </style>
     <!-- Calendly badge widget end -->
     <title>Jonathan Tang Music</title>
@@ -32,14 +24,11 @@
 
     <div class="loader">
         <div class="load-container">
-            <!-- <span class="loading-message">Finishing up my practice</span> -->
             <div class="trombone-container">
-                <img id="loader-body" src="../img/tromboneLogo.svg" width="250px" alt="logo">
-                <!-- <img id="loader-body" src="../img/tromboneBody.svg" width="250px" alt="logo">
-                <img id="loader-slide" src="../img/tromboneSlide.svg" width="250px" alt="logo"> -->
-                <img id="music-note-1" src="../img/musicNote.svg" width="40px" alt="logo">
-                <img id="music-note-2" src="../img/musicNote.svg" width="40px" alt="logo">
-                <img id="music-note-3" src="../img/musicNote.svg" width="40px" alt="logo">
+                <img id="loader-body" src="./img/tromboneLogo.svg" width="250px" alt="logo">
+                <img id="music-note-1" src="./img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-2" src="./img/musicNote.svg" width="40px" alt="logo">
+                <img id="music-note-3" src="./img/musicNote.svg" width="40px" alt="logo">
             </div>
             <div class="brand" id="loading-brand">
                 <a href="#">Jonathan Tang Music</a>
@@ -58,7 +47,7 @@
                 <li><a href="media.html">Media</a></li>
                 <li><a href="downloads.html">Downloads</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <!--<li class="cart"><a href="#"><img src="../img/cart.png" /></a></li>-->
+                <!--<li class="cart"><a href="#"><img src="./img/cart.png" /></a></li>-->
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -71,47 +60,46 @@
             </nav>
         <div class="not-nav">
             <section class="jumbotron" id="academy">
-                <img src="../img/banner.png" class="academy-background"/>
+                <img src="./img/banner.png" class="academy-background"/>
                 <h1 class="academy-logo academy-quotes"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
-                <h1 class="academy-logo-small no-transition"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>If you are an aspiring trombone player, message him and ask for a lesson because he gave me some great information!</p>
                     <h6><span>-HOLDEN WELCH</span> <span>NORTHWESTERN UNIVERSITY '24</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>Some days I don't feel like practicing, but your quote about motivation and discipline really struck me.</p>
                     <h6><span>-TANNER O'BEN</span> <span>CBA STUDENT</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>You're a great teacher. The amount of time you invest in your students you haven't even met in person is amazing. Thank you so much for helping me through my musical journey.</p>
                     <h6><span>-CHRISTIAN ESTADES</span> <span>CBA STUDENT</span></p>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>You are a very good teacher. You have improved a lot since this summer. I definitely noticed it last week since I hadn't had a lesson with you in a while. You know how to keep things even more concise now. It's cool to see the growth in people!</p>
                     <h6><span>-CHRIS LARSON</span> <span>COLUMBUS STATE UNIVERSITY '24</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>After taking lessons with you, I was recording in front of my band director and two friends and they were all surprised! All thanks to you!</p>
                     <h6><span>-JOHN SHIM</span> <span>CBA STUDENT</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>To be honest, part of the reason I stopped taking lessons from my former teacher is because they were always so negative. I've really appreciated your optimism and positivity.</p>
                     <h6><span></span><span>-CBA STUDENT</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
                 </div>
                 <div class="academy-quotes">
-                    <img src="../img/quote-icon.png" class="quote-icon" />
+                    <img src="./img/quote-icon.png" class="quote-icon" />
                     <p>I've never been able to play up to a high E before so this is exciting. I don't think I've ever learned this much in a lesson before.</p>
                     <h6><span>-SHIN TANAKA</span> <span>YST CONSERVATORY OF MUSIC</span></h6>
                     <h5>CINCINNATI BRASS ACADEMY</h5>
@@ -124,11 +112,45 @@
                 <p class="text-block">For rates and options please see the poster below. I look forward to working with some of you soon!</p>
             </section>
             <section class="poster">
-                <img src="../img/Poster.JPG" />
+                <img src="./img/Poster.JPG" />
+            </section>
+            <section class="text-lessons-container">
+                <h2 class="text-lessons-title">Text Lessons Presented By</h2>
+                <h2 class="text-lessons-title">Jonathan Tang</h2>
+                <div class="phone-display-container">
+                    <img class="phone" src="./img/phone.png" width="660px" alt="phone">
+                    <div class="phone-background-container">
+                        <div class="text-lessons-information">
+                            <div class="text-lessons-header">
+                                <div class="text-lessons-header-profile">
+                                    <img src="./img/bio_headshot.png" width="30px">
+                                    <p style="margin-bottom: 0; display: flex; align-items: center;"><b>Jonathan Tang</b></p>
+                                </div>
+                                <p style="margin-bottom: 0; display: flex; align-items: center;"><b>Now</b></p>
+                            </div>
+                            <div class="text-lessons-body">
+                                <div class="tiers">
+                                    <p style="margin-bottom: .3rem;"><b>Gold Tier - $20 per month</b></p>
+                                    <p>Send up to 10 videos per week<br>(20 minutes total)</p>
+                                    <p>Ask unlimited questions</p>
+                                    <p>24/7 feedback & support</p>
+                                    <p>Access to CBA group chat</p>
+                                </div>
+                                <div class="tiers">
+                                    <p style="margin-bottom: .3rem;"><b>Silver Tier - $15 per month</b></p>
+                                    <p>Send up to 5 videos per week<br>(10 minutes total)</li>
+                                    <p>Ask unlimited questions</p>
+                                    <p>24/7 feedback & support</p>
+                                    <p>Access to CBA group chat</p>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="phone-background" width="350px" height="500px" src="./img/sheet-music-background.jpg">
+                    </div>
+                </div>   
             </section>
             <section class="text-lessons lessons">
-                <h2 class="subtitle">Want to sign up for email lessons?</h2>
-                <p class="text-block">For $20 per month, you can send me up to 5 videos per week with a combined length of no more than 10 minutes and I will give you feedback!</p>
+                <h2 class="subtitle">Want to sign up for text lessons?</h2>
                 <form method="POST" action="messageSent.html" data-netlify="true" netlify-honeypot="bot-trap" autocomplete="off">
                     <div class="name input-container">
                         <label>Name:</label>
@@ -140,12 +162,17 @@
                         <input type="text" name="email" id="email" required>
                         <span class="underline"></span>
                     </div>
+                    <div class="phone-number input-container">
+                        <label>Phone Number:</label>
+                        <input type="text" name="phone" id="phone" required>
+                        <span class="underline"></span>
+                    </div>
                     <div class="subject input-container">
-                        <input type="hidden" name="subject" id="subject" value="I want to sign up for email lessons!">
+                        <input type="hidden" name="subject" id="subject" value="I want to sign up for text lessons!">
                     </div>
                     <div class="message input-container">
                         <label>Message:</label>
-                        <textarea rows="5" cols="78" name="message" id="message" required>Hi Jonathan, I would love to sign up for email lessons!</textarea>
+                        <textarea rows="5" cols="78" name="message" id="message" required>Hi Jonathan, I would love to sign up for text lessons!</textarea>
                         <span class="underline"></span>
                     </div>
                     <input type="hidden" name="bot-trap"> 
